Revision history for Graphics-Primitive

0.06
  - Add Driver

0.05
  - Don't prepare or draw invisible components in Containers

0.04
  - POD fixes
  - Add find_component and get_component as proxies in Container

0.03
  - Check for definedness of components in a Container before prepare & draw

0.02
  - Add visible to component
  - Fix Description
  - Add MI version because Yuval yelled at me

0.01    Date/time
        First version, released on an unsuspecting world.
